--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Free URL shortener to create short links and generate QR codes. Shorten long URLs instantly with our fast and reliable service." />
+    content="Free URL shortener to create short links. Shorten long URLs instantly with our fast and reliable service." />
   <meta name="keywords" content="URL shortener, short links, link shortener, tiny URL, short URL" />
-  <title>Short URL - Free URL Shortener</title>
+  <title>Tsnap - Free URL Shortener</title>
 </head>
 
 <body>
