google ads script added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,9 @@
     content="Free URL shortener to create short links. Shorten long URLs instantly with our fast and reliable service." />
   <meta name="keywords" content="URL shortener, short links, link shortener, tiny URL, short URL" />
   <title>Tsnap - Free URL Shortener</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8639067847402396"
+    crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
